--- a/cavelanguage/templates/nav.html
+++ b/cavelanguage/templates/nav.html
@@ -14,8 +14,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Symbol Library</a></li>
+        <li {% ifequal location 'home' %}class="active"{% endifequal %}><a href="/">Home</a></li>
+        <li {% ifequal location 'symbol_library' %}class="active"{% endifequal %}><a href="/symbols/">Symbol Library</a></li>
       </ul>
       
       <ul class="nav navbar-nav navbar-right">
