Add breadcrumb to symbol library

--- a/cavelanguage/templates/symbol_library.html
+++ b/cavelanguage/templates/symbol_library.html
@@ -4,6 +4,10 @@
 
 {% block content %}
 {% include 'nav.html' %}
+<ol class="breadcrumb">
+  <li><a href="/">Home</a></li>
+  <li class="active">Symbol Library</li>
+</ol>
 <h1>Symbol Library</h1>
 <p class="lead">The <strong>CAVE Language</strong> library is divided between the Core library and a series of extensions. The extensions are meant for more specialized purposes, and are kept out of the core because they are less likely to be of use to everyone.</p>
 <hr/>
