Increase header size on home page

--- a/cavelanguage/templates/home.html
+++ b/cavelanguage/templates/home.html
@@ -9,14 +9,14 @@
     <h3>Conversational Architecture Visual Expression Language</h3>
 </div>
 <hr/>
-<p class="lead"><strong>CAVE Language</strong> is a whiteboard, napkin and presentation -friendly visual design language for describing the behavior of <strong>Contextual Applications</strong>. Contextual Applications react to the context of the user - their specific circumstances - and dynamically respond according to that context.</p>
+<p class="lead"><strong>CAVE Language</strong> is a whiteboard, napkin and presentation -friendly visual design language for describing the behavior of <em>Contextual Applications</em>. Contextual Applications react to the context of the user - their specific circumstances - and dynamically respond according to that context.</p>
 <p></p>
 <div class="media">
     <div class="media-left">
         <img src="{% static 'images/language-flow.png' %}">
     </div>
     <div class="media-body">
-        <h3>Goals</h3>
+        <h2>Goals</h2>
         <p>CAVE Language was designed with the following goals in mind:</p>
         <h4>Whiteboard / Napkin / Presentation Friendly</h4>
         <p>CAVE should adapt well to different formats as needed. It should look fine in highly polished documents or presentations in the boardroom, but at the same time be useful written on the back of a napkin. It should be practical to write CAVE drawings on a whiteboard while discussing application design. In other words, precise usage of CAVE is okay, but sloppy usage of CAVE is also okay.</p>
@@ -29,7 +29,7 @@
     </div>
 </div>
 <hr/>
-<h3>Areas of Concern</h3>
+<h2>Areas of Concern</h2>
 <div class="media">
     <div class="media-body">
         <p>CAVE language is primarily concerned with three areas:</p>
