--- a/cavelanguage/templates/home.html
+++ b/cavelanguage/templates/home.html
@@ -10,7 +10,9 @@
 </div>
 <hr/>
 <p class="lead"><strong>CAVE Language</strong> is a whiteboard, napkin and presentation -friendly visual design language for describing the behavior of <em>Contextual Applications</em>. Contextual Applications react to the context of the user - their specific circumstances - and dynamically respond according to that context.</p>
-<h1>Check out the <a href="/symbols/">Symbol Library</a></h1>
+<div class="well">
+    <h3>Check out the <a href="/symbols/">Symbol Library</a>.</h3>
+</div>
 <p></p>
 <div class="media">
     <div class="media-left">
