Diagrams linked up.

--- a/cavelanguage/templates/nav.html
+++ b/cavelanguage/templates/nav.html
@@ -16,6 +16,7 @@
       <ul class="nav navbar-nav">
         <li {% ifequal location 'home' %}class="active"{% endifequal %}><a href="/">Home</a></li>
         <li {% ifequal location 'symbol_library' %}class="active"{% endifequal %}><a href="/symbols/">Symbol Library</a></li>
+        <li {% ifequal location 'diagrams' %}class="active"{% endifequal %}><a href="/diagrams/">Diagrams</a></li>
       </ul>
       
       <ul class="nav navbar-nav navbar-right">
