--- a/cavelanguage/templates/symbol.html
+++ b/cavelanguage/templates/symbol.html
@@ -34,12 +34,14 @@
         </table>
         {{ symbol.description|safe }}
         <hr/>
-        <h4>Diagrams that use {{ symbol.name }}</h4>
+        {% if symbol.diagrams.exists %}
+        <h4>Diagrams that use the {{ symbol.name }} symbol:</h4>
         <ul class="list-group">
             {% for diagram in symbol.diagrams.all %}
             <li class="list-group-item"><a href="/diagram/{{ diagram.pk }}/{{ diagram.slug }}/">{{ diagram.name }}</a></li>
             {% endfor %}
         </ul>
+        {% endif %}
     </div>
 </div>
 {% endblock content %}
