--- a/cavelanguage/templates/diagrams.html
+++ b/cavelanguage/templates/diagrams.html
@@ -13,7 +13,10 @@
 {% if diagrams %}
 <ul class="list-group">
     {% for diagram in diagrams %}
-    <li class="list-group-item"><a href="/diagram/{{ diagram.pk }}/{{ diagram.slug }}/">{{ diagram.name }}</a></li>
+    <li class="list-group-item">
+        <h4><a href="/diagram/{{ diagram.pk }}/{{ diagram.slug }}/">{{ diagram.name }}</a></h4> 
+        {{ diagram.discussion|safe }}
+    </li>
     {% endfor %}
 </ul>
 {% endif %}
