Adding type form for Slack signup.

--- a/cavelanguage/templates/home.html
+++ b/cavelanguage/templates/home.html
@@ -70,4 +70,7 @@
 <p>The best way to approach an abstract application design problem is to use a foundational metaphor upon which a system of interaction can be built. Some historical examples of foundational metaphors include the *desktop *metaphor in personal computing, and the web page. While there is nothing intrinsic in a computer operating system that requires the concept of a desktop, nor anything intrinsic in the networked exchange of files that requires the concept of a page, both metaphors are used to build an organizational model in the application designer's mind.</p>
 <p>For contextual applications, the best foundational metaphor is the natural language conversation. A conversation conducted between two individuals is a perfect example of ongoing dynamic response to context. A conversational participant gathers context concerning their counterpart based both on explicitly communicated information as well as inferences that they make based on their counterpart's actions and circumstances. In response to this context, the participant dynamically alters their behavior in real time.</p>
 <p>Describing how an application behaves as a participant in a two-way conversation is the best way to organize and specify the behavior of a contextual application.</p>
+<hr/>
+<h2>Interested in working on CAVE Language? Join the CAVE Language Slack!</h2>
+{% include 'typeform.html' %}
 {% endblock content %}
