Adding CC license.

--- a/cavelanguage/templates/base.html
+++ b/cavelanguage/templates/base.html
@@ -36,6 +36,12 @@
                     {% endblock content %}
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <hr/>
+                    {% include 'cc_license.html' %}
+                </div>
+            </div>
         </div>
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
