Adding responsive class to image.

--- a/cavelanguage/templates/diagram.html
+++ b/cavelanguage/templates/diagram.html
@@ -11,7 +11,7 @@
 </ol>
 <h4>Diagram</h4>
 <h1>{{ diagram.name }}</h1>
-<img src="{{ diagram.image }}" class="diagram-image">
+<img src="{{ diagram.image }}" class="diagram-image img-responsive center-block">
 <hr/>
 <h3><a href="{{ diagram.download }}">Download "{{ diagram.name }}" as PDF</a></h3>
 <hr/>
