--- a/cavelanguage/static/css/style.css
+++ b/cavelanguage/static/css/style.css
@@ -1,1 +1,6 @@
 img.diagram-image { max-width:1170px; }
+
+.jumbotron { border-style:solid; border-color:blue; border-width: 1px; background-color:#EEEEFF; }
+
+.jumbotron h1 { color: blue; }
+.jumbotron h3 { color: blue; }
