--- a/cavelanguage/templates/nav.html
+++ b/cavelanguage/templates/nav.html
@@ -17,6 +17,7 @@
         <li {% ifequal location 'home' %}class="active"{% endifequal %}><a href="/">Home</a></li>
         <li {% ifequal location 'symbol_library' %}class="active"{% endifequal %}><a href="/symbols/">Symbol Library</a></li>
         <li {% ifequal location 'diagrams' %}class="active"{% endifequal %}><a href="/diagrams/">Diagrams</a></li>
+        <li {% ifequal location 'contributors' %}class="active"{% endifequal %}><a href="/contributors/">Contributors</a></li>
       </ul>
       
       <ul class="nav navbar-nav navbar-right">
