--- a/cavelanguage/templates/home.html
+++ b/cavelanguage/templates/home.html
@@ -37,7 +37,7 @@
     <div class="media-body">
         <p>CAVE language is primarily concerned with three areas:</p>
         <h4>Data</h4>
-        <p>A contextual app has to deal with the collection, acquisition and processing of data. CAVE Language data symbols show data and its origins, be they are sensors, external data sources or user input. A CAVE data drawing can answer the question, "Where does this data come from?"</p>
+        <p>A contextual app has to deal with the collection, acquisition and processing of data. CAVE Language data symbols show data and its origins, be they sensors, external data sources or user input. A CAVE data drawing can answer the question, "Where does this data come from?"</p>
         <h4>Context</h4>
         <p>From raw data, meaningful context can be inferred. Context builds on data and, through inferences, creates insights into user context. For example, a CAVE context drawing might show how an inference maps user behavioral data to an insight about a user's affinity.</p>
         <h4>Modal Response</h4>
